// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelatableViews RelatableView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-jeraig dxzVkG"
  >
    <div
      class="sc-gjNHFA fVNuGK"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`RelatableViews RelatableView does not crash if key is empty string 1`] = `
<div>
  <div
    class="sc-gUQvok gvaSKo"
  >
    <div
      class="sc-cbTzjv emWApn relatable"
    >
      <table
        class="ui basic table relatable__table "
        role="table"
      >
        <thead
          class=""
        >
          <tr
            class="relatable__table-row relatable__table-header-row"
            role="row"
          >
            <th
              class="collapsing relatable__table-cell relatable__table-header-cell relatable__table-header-actions-cell"
            >
              <span
                class="relatable__table-row-actions"
              />
            </th>
            <th
              class="relatable__table-cell relatable__table-header-cell"
              colspan="1"
              role="columnheader"
            >
              \`\`
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class="relatable__table-row relatable__table-body-row "
            role="row"
          >
            <td
              class="relatable__table-cell relatable__table-body-cell relatable__table-row-actions-cell"
            >
              <div
                class="ui label relatable__table-row-number"
              >
                1
              </div>
              <span
                class="relatable__table-row-actions"
              />
            </td>
            <td
              class="relatable__table-cell relatable__table-body-cell"
              role="cell"
            >
              <span
                class="sc-fIosxK esDBUn"
              >
                "String value"
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RelatableViews RelatableView does not display bodyMessage if rows, and escapes HTML 1`] = `
<div>
  <div
    class="sc-gUQvok gvaSKo"
  >
    <div
      class="sc-cbTzjv emWApn relatable"
    >
      <table
        class="ui basic table relatable__table "
        role="table"
      >
        <thead
          class=""
        >
          <tr
            class="relatable__table-row relatable__table-header-row"
            role="row"
          >
            <th
              class="collapsing relatable__table-cell relatable__table-header-cell relatable__table-header-actions-cell"
            >
              <span
                class="relatable__table-row-actions"
              />
            </th>
            <th
              class="relatable__table-cell relatable__table-header-cell"
              colspan="1"
              role="columnheader"
            >
              x
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class="relatable__table-row relatable__table-body-row "
            role="row"
          >
            <td
              class="relatable__table-cell relatable__table-body-cell relatable__table-row-actions-cell"
            >
              <div
                class="ui label relatable__table-row-number"
              >
                1
              </div>
              <span
                class="relatable__table-row-actions"
              />
            </td>
            <td
              class="relatable__table-cell relatable__table-body-cell"
              role="cell"
            >
              <span
                class="sc-fIosxK esDBUn"
              >
                "String with HTML &lt;strong&gt;in&lt;/strong&gt; it"
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RelatableViews TableStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="sc-jeraig dxzVkG"
  />
</div>
`;

exports[`RelatableViews TableStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="sc-jeraig dxzVkG"
  >
    <div
      class="sc-gjNHFA fVNuGK"
    >
      <span>
        Started streaming 1 records after 5 ms and completed after 10  ms.
      </span>
    </div>
  </div>
</div>
`;
